--- a/Kontakt.html
+++ b/Kontakt.html
@@ -5,6 +5,7 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="Restaurang.css" rel="stylesheet" type="text/css" />
+    <link href="https://fonts.googleapis.com/css?family=Roboto|Spectral+SC" rel="stylesheet">
     <title> Kontakt - Gustavsson's Gourmet </title>
   </head>
 
@@ -12,7 +13,7 @@
 
       <header>
           <h1>
-            <a href="Index.html" >GUSTAVSSON'S GOURMET</a>
+            <a href="index.html" >GUSTAVSSON'S GOURMET</a>
           </h1>
 
           <h4>
@@ -67,7 +68,7 @@
 		       MAILA OSS
 		   </h6>
 
-       <p2> Om vi inte svarar i telefonen av någon anledning så är du som kund även hjärtligt välkommen att skicka iväg ett mail till oss istället. Vi garanterar att vi kommer att läsa just ditt mail så fort vi kan och även svara vid en eventuell fråga. Våran mail finner ni precis nedanför denna text. Tack på förhand! </p2>
+       <p2> Om vi inte svarar i telefonen så är du som kund istället hjärtligt välkommen att skicka iväg ett mail till oss. Vi garanterar att vi kommer att läsa ditt mail så fort vi kan samt svara vid en eventuell fråga. Våran mail finner ni precis nedanför denna text. Tack på förhand! </p2>
        <p>                                                                      </p>
        <p>                                                                      </p>
        <p>                                                                      </p>
