--- a/Information.html
+++ b/Information.html
@@ -5,6 +5,7 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="Restaurang.css" rel="stylesheet" type="text/css" />
+    <link href="https://fonts.googleapis.com/css?family=Roboto|Spectral+SC" rel="stylesheet">
     <title> Information - Gustavsson's Gourmet </title>
   </head>
 
@@ -12,7 +13,7 @@
 
       <header>
           <h1>
-            <a href="Index.html" >GUSTAVSSON'S GOURMET</a>
+            <a href="index.html" >GUSTAVSSON'S GOURMET</a>
           </h1>
 
           <h4>
@@ -50,7 +51,7 @@
 		       GUSTAVSSON'S GOURMET
        </h6>
 
-       <p2>Gustavsson’s Gourmet skapades år 2009 utav Hannes Gustavsson som än idag är dess ägare. Vi här på Gustavsson’s Gourmet har sedan skapelsen utav denna ljuvliga restaurang erbjudit mat i toppkvalité och älskar omgivningen. Vi har ett relativt brett sortiment som innehåller allt från havets godbitar till en riktigt god köttbit, vi har även maträtter anpassade till barn i yngre åldrar. Trots den succé som överväldigat Gustavsson’s Gourmet under de senaste åren så finns tyvärr endast denna restaurang i en utav Sveriges många städer nämligen Vänersborg. </p2>
+       <p2>Gustavsson’s Gourmet skapades år 2009 utav Hannes Gustavsson som än idag är restaurangens ägare. Vi här på Gustavsson’s Gourmet har sedan skapelsen utav denna ljuvliga restaurang erbjudit mat i toppkvalité och älskar omgivningen. Vi har ett relativt brett sortiment som innehåller allt från havets godbitar till flera riktigt goda köttbitar, vi har även maträtter anpassade till barn i yngre åldrar. Trots den succé som överväldigat Gustavsson’s Gourmet under de senaste åren så finns tyvärr endast denna restaurang i en utav Sveriges många städer nämligen Vänersborg. </p2>
        <p> </p>
        <p> </p>
        <p> </p>
