--- a/Information.html
+++ b/Information.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 
-<html>
+<html lang="sv">
 
   <head>
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="Restaurang.css" rel="stylesheet" type="text/css" />
     <link href="https://fonts.googleapis.com/css?family=Roboto|Spectral+SC" rel="stylesheet">
@@ -18,7 +19,7 @@
 
           <h4>
             IF GLUTTONY IS A SIN, WELCOME TO HELL
-          <h4>
+          </h4>
       </header>
 
 <div id="Wrapper">
