--- a/Kontakt.html
+++ b/Kontakt.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html>
+<html lang="sv">
 
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -18,7 +18,7 @@
 
           <h4>
             IF GLUTTONY IS A SIN, WELCOME TO HELL
-          <h4>
+          </h4>
       </header>
 
 <div id="Wrapper">
@@ -46,9 +46,8 @@
 </div>
 
 <h3> Om du som kund har några frågor till oss på Gustavsson's Gourmet angående till exempel bokning av
-     bord, menyn eller endast vill ge din synpunkt på någonting angående någon utav våra resturanger, hör gärna av dig till oss via telefon eller mail. </h3>
+     bord, menyn eller endast vill ge din synpunkt på någonting angående vår resturanger, hör gärna av dig till oss via telefon eller mail. </h3>
 <div id="Kontakta">
-  <main>
     <section id="Ring">
 	     <h6>
 		       RING OSS
@@ -91,7 +90,6 @@
         <p>                                                                      </p>
        <p2> Instagram: Gustavssonsgourmet </p2>
  	  </section>
-    </main>
  </div>
 
 
