--- a/Meny.html
+++ b/Meny.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html>
+<html lang="sv">
 
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -18,7 +18,7 @@
 
           <h4>
             IF GLUTTONY IS A SIN, WELCOME TO HELL
-          <h4>
+          </h4>
       </header>
 
 <div id="Wrapper">
@@ -46,7 +46,6 @@
 </div>
 
 <div id="Container">
-  <main>
     <section id="Maträtter">
 	     <h6>
 		       MATRÄTTER
@@ -55,7 +54,7 @@
 	  </section>
 
     <section class="huvudrätt" id="Grillen">
-       <p5> FRÅN GRILLEN </p5>
+       <h5> FRÅN GRILLEN </h5>
     </section>
 
     <section class="rätt"  id="Halloumiburgare">
@@ -93,7 +92,7 @@
 	  </section>
 
     <section class="huvudrätt"  id="Fisk">
-       <p5> FRÅN HAVET </p5>
+       <h5> FRÅN HAVET </h5>
     </section>
 
     <section class="rätt"  id="Laxtallrik">
@@ -130,7 +129,7 @@
     </section>
 
     <section class="huvudrätt" id="Sallad">
-       <p5> SALLADER </p5>
+       <h5> SALLADER </h5>
     </section>
 
     <section class="rätt"  id="Ceasarsallad">
@@ -167,7 +166,7 @@
 	  </section>
 
     <section class="huvudrätt" id="Barnmeny">
-       <p5> BARNMENYER </p5>
+       <h5> BARNMENYER </h5>
     </section>
 
     <section class="barnrätt" id="Fiskchips">
@@ -227,7 +226,6 @@
 
 
 	  </section>
-	 </main>
  </div>
 
 <footer>
