--- a/Information.html
+++ b/Information.html
@@ -3,7 +3,6 @@
 <html lang="sv">
 
   <head>
-
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="Restaurang.css" rel="stylesheet" type="text/css" />
     <link href="https://fonts.googleapis.com/css?family=Roboto|Spectral+SC" rel="stylesheet">
@@ -27,19 +26,19 @@
       <ul>
         <li id="Kontakt">
           <h2>
-            <a href="Kontakt.html" style="color: rgb(o,255,0)"><font color="#FFFFFF"> KONTAKT </font> </a>
+            <a href="Kontakt.html" style="color: rgb(o,255,0)"> KONTAKT </a>
           </h2>
         </li>
 
         <li id="Meny">
           <h2>
-            <a href="Meny.html" style="color: rgb(o,255,0)"><font color="#FFFFFF"> VÅR MENY </font> </a>
+            <a href="Meny.html" style="color: rgb(o,255,0)"> VÅR MENY </a>
           </h2>
         </li>
 
         <li id="Information">
           <h2>
-            <a href="Information.html" style="color: rgb(o,255,0)"><font color="#FFFFFF"> INFORMATION </font> </a>
+            <a href="Information.html" style="color: rgb(o,255,0)"> INFORMATION  </a>
           </h2>
         </li>
       </ul>
@@ -52,11 +51,8 @@
 		       GUSTAVSSON'S GOURMET
        </h6>
 
-       <p2>Gustavsson’s Gourmet skapades år 2009 utav Hannes Gustavsson som än idag är restaurangens ägare. Vi här på Gustavsson’s Gourmet har sedan skapelsen utav denna ljuvliga restaurang erbjudit mat i toppkvalité och älskar omgivningen. Vi har ett relativt brett sortiment som innehåller allt från havets godbitar till flera riktigt goda köttbitar, vi har även maträtter anpassade till barn i yngre åldrar. Trots den succé som överväldigat Gustavsson’s Gourmet under de senaste åren så finns tyvärr endast denna restaurang i en utav Sveriges många städer nämligen Vänersborg. </p2>
-       <p> </p>
-       <p> </p>
-       <p> </p>
-       <p2> Välkomna hit på en upplevelse ni sent kommer att glömma! </p2>
+       <p class="p2"> Gustavsson’s Gourmet skapades år 2009 utav Hannes Gustavsson som än idag är restaurangens ägare. Vi här på Gustavsson’s Gourmet har sedan skapelsen utav denna ljuvliga restaurang erbjudit mat i toppkvalité och älskar omgivningen. Vi har ett relativt brett sortiment som innehåller allt från havets godbitar till flera riktigt goda köttbitar, vi har även maträtter anpassade till barn i yngre åldrar. Trots den succé som överväldigat Gustavsson’s Gourmet under de senaste åren så finns tyvärr endast denna restaurang i en utav Sveriges många städer nämligen Vänersborg. <br><br><br>
+       Välkomna hit på en upplevelse ni sent kommer att glömma! </p>
 	  </section>
 
 
@@ -65,19 +61,15 @@
 		       VÅRA ÖPPETTIDER
 		   </h6>
 
-       <p2>Vi har såklart öppet så ofta vi bara kan, vissa dagar längre än andra. Nedanför denna text kan ni som kunder se hur våra öppettider ser ut under veckodagarna. </p2>
-       <p> </p>
-       <p> </p>
-       <p2> Vi på Gustavsson's Gourmet har dock inte öppet på julafton, nyårsdagen, midsommarafton eller nationaldagen. Alla andra dagar är ni hjärtligt välkommna! </p2>
-       <p> </p>
-       <p> </p>
-       <p> </p>
-       <p> </p>
-       <p2> Måndag - Torsdag: 16:00 - 23:00 </p2>
-       <p> </p>
-       <p2> Fredag - Lördag: 16:00 - 02:00 </p2>
-       <p> </p>
-       <p2> Söndag: 16:00 - 23:00 </p2>
+       <p class="p2">Vi har såklart öppet så ofta vi bara kan, vissa dagar längre än andra. Nedanför denna text kan ni som kunder se hur våra öppettider ser ut under veckodagarna. <br><br>
+
+        Vi på Gustavsson's Gourmet har dock inte öppet på julafton, nyårsdagen, midsommarafton eller nationaldagen. Alla andra dagar är ni hjärtligt välkommna! <br><br><br>
+
+        Måndag - Torsdag: 16:00 - 23:00 <br>
+
+        Fredag - Lördag: 16:00 - 02:00 <br>
+
+        Söndag: 16:00 - 23:00 </p>
      </section>
 
     <section id="Jobbhososs">
@@ -85,7 +77,7 @@
 		       JOBB HOS OSS
        </h6>
 
-       <p2>Är du sugen på att jobba hos oss så ansök gärna. Vi letar ständigt efter nya trevliga medarbetare, oavsett om du är extremt rutinerad inom branschen eller om detta är ditt första riktiga jobb. De enda kraven vi har för er som är sugna på att ansöka är att ni skall ha ett glatt humör samt rätt inställning. Om detta stämmer in bra på dig så är du hjärtligt välkommen att ansöka till oss på Gustavsson’s Gourmet. Detta görs via den mail du kan hitta på våran kontaktsida. Hoppas vi hörs!</p2>
+       <p class="p2">Är du sugen på att jobba hos oss så ansök gärna. Vi letar ständigt efter nya trevliga medarbetare, oavsett om du är extremt rutinerad inom branschen eller om detta är ditt första riktiga jobb. De enda kraven vi har för er som är sugna på att ansöka är att ni skall ha ett glatt humör samt rätt inställning. Om detta stämmer in bra på dig så är du hjärtligt välkommen att ansöka till oss på Gustavsson’s Gourmet. Detta görs via den mail du kan hitta på våran kontaktsida. Hoppas vi hörs!</p>
 	  </section>
 </div>
 
