--- a/Meny.html
+++ b/Meny.html
@@ -22,27 +22,25 @@
       </header>
 
 <div id="Wrapper">
-  <main>
       <ul>
         <li id="Kontakt">
           <h2>
-            <a href="Kontakt.html" style="color: rgb(o,255,0)"><font color="#FFFFFF"> KONTAKT </font> </a>
+            <a href="Kontakt.html" style="color: rgb(o,255,0)"> KONTAKT </a>
           </h2>
         </li>
 
         <li id="Meny">
           <h2>
-            <a href="Meny.html" style="color: rgb(o,255,0)"><font color="#FFFFFF"> VÅR MENY </font> </a>
+            <a href="Meny.html" style="color: rgb(o,255,0)"> VÅR MENY </a>
           </h2>
         </li>
 
         <li id="Information">
           <h2>
-            <a href="Information.html" style="color: rgb(o,255,0)"><font color="#FFFFFF"> INFORMATION </font> </a>
+            <a href="Information.html" style="color: rgb(o,255,0)"> INFORMATION </a>
           </h2>
         </li>
       </ul>
-  </main>
 </div>
 
 <div id="Container">
@@ -50,145 +48,131 @@
 	     <h6>
 		       MATRÄTTER
        </h6>
-		   <p6> Under denna ruta kan du se vad vi här på Gustavsson's Gourmet har att erbjuda! </p6>
+		   <p class="p6"> Under denna ruta kan du se vad vi här på Gustavsson's Gourmet har att erbjuda! </p>
 	  </section>
 
     <section class="huvudrätt" id="Grillen">
-       <h5> FRÅN GRILLEN </h5>
+       <p class="p5"> FRÅN GRILLEN </p>
     </section>
 
     <section class="rätt"  id="Halloumiburgare">
 	     <h6>
 		       Halloumiburgare
        </h6>
-		   <p6> Halloumiburgare och ugnsbakad sötpotatis. Serveras med portobello svamp. </p6>
-       <p> </p>
-       <p> </p>
-       <p> </p>
-       <p6> Kostnad: 129 :- </p6>
+		   <p class="p6"> Halloumiburgare och ugnsbakad sötpotatis. Serveras med portobello svamp. <br><br><br>
+
+        Kostnad: 129 :- </p>
 	  </section>
 
     <section class="rätt" id="Plankstek">
 	     <h6>
 		       Plankstek
        </h6>
-		   <p6> Nötkött och duchessepotatis.
-         Serveras med chilibearnaise.</p6>
-         <p> </p>
-         <p> </p>
-         <p> </p>
-         <p6> Kostnad: 149 :- </p6>
+
+		   <p class="p6"> Nötkött och duchessepotatis.
+         Serveras med chilibearnaise alternativt vanlig bearnaise.<br><br><br>
+
+         Kostnad: 149 :- </p>
 	  </section>
 
     <section class="rätt"  id="Entrecote">
 	     <h6>
 		       Entrecôte à la Monsieur
        </h6>
-		   <p6> Pepparkryddad entrecôte och pommes frites. Serveras med grösaker samt brunsås. </p6>
-       <p> </p>
-       <p> </p>
-       <p> </p>
-       <p6> Kostnad: 199 :- </p6>
+		   <p class="p6"> Pepparkryddad entrecôte och pommes frites. Serveras med grösaker samt brunsås. <br><br><br>
+
+       Kostnad: 199 :- </p>
 	  </section>
 
     <section class="huvudrätt"  id="Fisk">
-       <h5> FRÅN HAVET </h5>
+       <p class="p5"> FRÅN HAVET </p>
     </section>
 
     <section class="rätt"  id="Laxtallrik">
        <h6>
            Laxtallrik
        </h6>
-       <p6> Kallrökt och gravad regnbågslax. Serveras med hovmästarsås, sallad och kokt potatis. </p6>
-       <p> </p>
-       <p> </p>
-       <p> </p>
-       <p6> Kostnad: 149 :- </p6>
+       <p class="p6"> Kallrökt och gravad regnbågslax. Serveras med hovmästarsås, sallad och kokt potatis. <br><br><br>
+
+       Kostnad: 149 :- </p>
     </section>
 
     <section class="rätt"  id="Rödtunga">
        <h6>
            Helstekt rödtunga
        </h6>
-       <p6> Helstekt rödtunga och dillpotatis. Serveras med pepparrot samt skirat smör.</p6>
-       <p> </p>
-       <p> </p>
-       <p> </p>
-       <p6> Kostnad: 129 :- </p6>
+
+       <p class="p6"> Helstekt rödtunga och dillpotatis. Serveras med pepparrot samt med skirat smör. <br><br><br>
+
+       Kostnad: 129 :- </p>
     </section>
 
     <section class="rätt"  id="Hummersoppa">
        <h6>
            Hummersoppa
        </h6>
-       <p6> Krämig hummersoppa. Serveras med brödkrutonger. </p6>
-       <p> </p>
-       <p> </p>
-       <p> </p>
-       <p6> Kostnad: 149 :- </p6>
+
+       <p class="p6"> Krämig hummersoppa. Serveras med brödkrutonger samt creme fraiche alt. gräddfil. <br><br><br>
+
+       Kostnad: 149 :- </p>
     </section>
 
     <section class="huvudrätt" id="Sallad">
-       <h5> SALLADER </h5>
+       <p class="p5"> SALLADER </p>
     </section>
 
     <section class="rätt"  id="Ceasarsallad">
 	     <h6>
 		       Ceasarsallad
        </h6>
-		   <p6> Ceasarsallad toppad med grillad kyckling samt knaperstekt bacon. </p6>
-       <p> </p>
-       <p> </p>
-       <p> </p>
-       <p6> Kostnad: 149 :- </p6>
+
+		   <p class="p6"> Ceasarsallad toppad med grillad kyckling samt knaperstekt bacon. Valfri dressing. <br><br><br>
+
+       Kostnad: 149 :- </p>
 	  </section>
 
     <section class="rätt"  id="Räksallad">
 	     <h6>
 		       Räksallad
        </h6>
-		   <p6> En generös räkssallad med både avokadodipp samt tortillachips vid sidan om.</p6>
-       <p> </p>
-       <p> </p>
-       <p> </p>
-       <p6> Kostnad: 199 :- </p6>
+
+		   <p class="p6"> En generös räkssallad med både avokadodipp samt tortillachips vid sidan om. <br><br><br>
+
+       Kostnad: 199 :- </p>
 	  </section>
 
     <section class="rätt"  id="Romansallad">
 	     <h6>
 		       Romansallad
        </h6>
-		   <p6> Krispig romansallad med krutonger. Serveras även med Grana Padano samt cesaredressing. </p6>
-       <p> </p>
-       <p> </p>
-       <p> </p>
-       <p6> Kostnad: 149 :- </p6>
+
+		   <p class="p6"> Krispig romansallad med krutonger. Serveras även med Grana Padano samt cesaredressing. <br><br><br>
+
+       Kostnad: 149 :- </p>
 	  </section>
 
     <section class="huvudrätt" id="Barnmeny">
-       <h5> BARNMENYER </h5>
+       <p class="p5"> BARNMENYER </p>
     </section>
 
     <section class="barnrätt" id="Fiskchips">
 	     <h6>
 		       Fish & Chips
        </h6>
-		   <p6> Sprödbakad torskfilé med pommes, ärtor och citron. Serveras även med remouladsås. </p6>
-       <p> </p>
-       <p> </p>
-       <p> </p>
-       <p6> Kostnad: 129 :- </p6>
+
+		   <p class="p6"> Sprödbakad torskfilé med pommes, ärtor och en citron. Serveras även med en remouladsås. <br><br><br>
+
+       Kostnad: 129 :- </p>
 	  </section>
 
     <section class="barnrätt"  id="Pannkakor">
 	     <h6>
 		       Pannkakor
        </h6>
-		   <p6> 3 stycken pannkakor. Serveras med sylt och grädde, alternativt sylt och vaniljglass. </p6>
-       <p> </p>
-       <p> </p>
-       <p> </p>
-       <p6> Kostnad: 129 :- </p6>
+
+		   <p class="p6"> 3 stycken pannkakor. Serveras med sylt och grädde, alternativt med sylt och god vaniljglass. <br><br><br>
+
+       Kostnad: 129 :- </p>
 	  </section>
 
     <section class="drycker" id="Drycker">
@@ -196,34 +180,21 @@
 		       DRYCKER
 		   </h6>
 
-       <p> KOSTNAD: 15 :- </p>
-       <p> Coca-Cola</p>
-       <p> Fanta</p>
-       <p> Pepsi </p>
-       <p> Sprite </p>
-       <p>                                                                             </p>
-       <p>                                                                             </p>
-       <p>                                                                             </p>
-       <p>                                                                             </p>
-       <p> KOSTNAD: 25 :- </p>
-       <p> Carlsberg</p>
-       <p> Corona</p>
-       <p> Somersby</p>
-       <p>                                                                             </p>
-       <p>                                                                             </p>
-       <p>                                                                             </p>
-       <p>                                                                             </p>
-       <p> KOSTNAD: 35 :- </p>
-       <p> Sangria</p>
-       <p> Rosé</p>
-       <p>                                                                             </p>
-       <p>                                                                             </p>
-       <p>                                                                             </p>
-       <p>                                                                             </p>
-       <p> KOSTNAD: 20 :- </p>
-       <p> Kaffe</p>
-       <p> Té</p>
-
+       <p> KOSTNAD: 15 :-<br><br>
+         Coca-Cola<br>
+         Fanta<br>
+         Pepsi<br>
+         Sprite<br><br><br>
+         KOSTNAD: 25 :-<br><br>
+         Carlsberg<br>
+         Corona<br>
+         Somersby<br><br><br>
+         KOSTNAD: 35 :-<br><br>
+         Sangria<br>
+         Rosé<br><br><br>
+         KOSTNAD: 20 :-<br><br>
+         Kaffe<br>
+         Té</p>
 
 	  </section>
  </div>
