--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 
-<html>
+<html lang="sv">
 
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="Restaurang.css" rel="stylesheet" type="text/css"/>
+    <link href="Restaurang.css" rel="stylesheet" type="text/css" />
     <link href="https://fonts.googleapis.com/css?family=Roboto|Spectral+SC" rel="stylesheet">
     <title> Gustavsson's Gourmet </title>
   </head>
@@ -26,19 +26,19 @@
       <ul>
         <li id="Kontakt">
           <h2>
-            <a href="Kontakt.html" style="color: rgb(o,255,0)"><font color="#FFFFFF"> KONTAKT </font> </a>
+            <a href="Kontakt.html" style="color: rgb(o,255,0)"> KONTAKT </a>
           </h2>
         </li>
 
         <li id="Meny">
           <h2>
-            <a href="Meny.html" style="color: rgb(o,255,0)"><font color="#FFFFFF">VÅR MENY</font></a>
+            <a href="Meny.html" style="color: rgb(o,255,0)"> VÅR MENY </a>
           </h2>
         </li>
 
         <li id="Information">
           <h2>
-            <a href="Information.html" style="color: rgb(o,255,0)"><font color="#FFFFFF">INFORMATION</font></a>
+            <a href="Information.html" style="color: rgb(o,255,0)"> INFORMATION </a>
           </h2>
         </li>
       </ul>
@@ -47,7 +47,7 @@
 
 <div id="Startsida">
     <section id="Rubrik">
-        <p4> Välkommen till vår officiella hemsida. Här hittar ni allt de senaste om vår meny, vart ni kan nå oss samt vilka förändringar vi gör inom vår meny. Hoppas ni finner den information ni söker så ses vi i framtiden! Ha en fortsatt trevlig dag, önskar vi här på Gustavsson's Gourmet! </p4>
+        <p class="p4"> Välkommen till vår officiella hemsida. Här hittar ni allt de senaste om vår meny, vart ni kan nå oss samt vilka förändringar vi gör inom vår meny. Hoppas ni finner den information ni söker så ses vi i framtiden! Ha en fortsatt trevlig dag, önskar vi här på Gustavsson's Gourmet! </p>
     </section>
 </div>
 
