--- a/Kontakt.html
+++ b/Kontakt.html
@@ -22,44 +22,39 @@
       </header>
 
 <div id="Wrapper">
-  <main>
       <ul>
         <li id="Kontakt">
           <h2>
-            <a href="Kontakt.html" style="color: rgb(o,255,0)"><font color="#FFFFFF"> KONTAKT </font> </a>
+            <a href="Kontakt.html" style="color: rgb(o,255,0)"> KONTAKT </a>
           </h2>
         </li>
 
         <li id="Meny">
           <h2>
-            <a href="Meny.html" style="color: rgb(o,255,0)"><font color="#FFFFFF"> VÅR MENY </font> </a>
+            <a href="Meny.html" style="color: rgb(o,255,0)"> VÅR MENY </a>
           </h2>
         </li>
 
         <li id="Information">
           <h2>
-            <a href="Information.html" style="color: rgb(o,255,0)"><font color="#FFFFFF"> INFORMATION </font> </a>
+            <a href="Information.html" style="color: rgb(o,255,0)"> INFORMATION </a>
           </h2>
         </li>
       </ul>
-  </main>
 </div>
 
 <h3> Om du som kund har några frågor till oss på Gustavsson's Gourmet angående till exempel bokning av
-     bord, menyn eller endast vill ge din synpunkt på någonting angående vår resturanger, hör gärna av dig till oss via telefon eller mail. </h3>
+     bord, menyn eller endast vill ge din synpunkt på någonting angående någon utav våra resturanger, hör gärna av dig till oss via telefon eller mail. </h3>
 <div id="Kontakta">
+
     <section id="Ring">
 	     <h6>
 		       RING OSS
        </h6>
 
-       <p2> Om du har några frågor till oss på Gustavsson's Gourmet så ring oss gärna, vi svarar så ofta vi bara kan, dock endast under öppetiderna. Dessa går att hitta under fliken vid namn "Information". Numret till oss ser ni precis nedanför just denna text. Tack på förhand! </p2>
-       <p>                                                                      </p>
-       <p>                                                                      </p>
-       <p>                                                                      </p>
-       <p>                                                                      </p>
-       <p>                                                                      </p>
-       <p2> Telefon: 0521-65342 </p2>
+       <p class="p2"> Om du har några frågor till oss på Gustavsson's Gourmet så ring oss gärna, vi svarar så ofta vi bara kan, dock endast under öppetiderna. Dessa går att hitta under fliken vid namn "Information". Numret till oss ser ni precis nedanför just denna text. Tack på förhand! <br><br><br>
+
+       Telefon: 0521-65342 </p>
 	  </section>
 
     <section id="Mail">
@@ -67,28 +62,21 @@
 		       MAILA OSS
 		   </h6>
 
-       <p2> Om vi inte svarar i telefonen så är du som kund istället hjärtligt välkommen att skicka iväg ett mail till oss. Vi garanterar att vi kommer att läsa ditt mail så fort vi kan samt svara vid en eventuell fråga. Våran mail finner ni precis nedanför denna text. Tack på förhand! </p2>
-       <p>                                                                      </p>
-       <p>                                                                      </p>
-       <p>                                                                      </p>
-       <p>                                                                      </p>
-       <p>                                                                      </p>
-       <p2> Mail: Gustavssons-gourmet@hotmail.com </p2>
+       <p class="p2"> Om vi inte svarar i telefonen så är du som kund istället hjärtligt välkommen att skicka iväg ett mail till oss. Vi garanterar att vi kommer att läsa ditt mail så fort vi kan samt svara vid en eventuell fråga. Våran mail finner ni precis nedanför denna text. Tack på förhand! <br><br><br>
+
+       Mail: Gustavssons-gourmet@hotmail.com </p>
      </section>
 
      <section id="Socialt">
  	     <h6>
  		       FÖLJ OSS PÅ SOCIALA MEDIER
         </h6>
- 		   <p2> Om ni vill veta mer om vad som sker hos oss på Gustavsson's Gourmet på dagarna så kan ni följa oss på sociala medier. Där lägger vi ut nyheter kring menyn, resturangen i sig och mycket annat. Hur ni finner oss på dessa sociala medier kan ni se precis nedanför just denna text!  </p2>
-       <p>                                                                      </p>
-       <p>                                                                      </p>
-       <p>                                                                      </p>
-       <p>                                                                      </p>
-       <p>                                                                      </p>
-       <p2> Facebook: Gustavsson's Gourmet</p2>
-        <p>                                                                      </p>
-       <p2> Instagram: Gustavssonsgourmet </p2>
+
+ 		   <p class="p2"> Om ni vill veta mer om vad som sker hos oss på Gustavsson's Gourmet på dagarna så kan ni följa oss på sociala medier. Där lägger vi ut nyheter kring menyn, resturangen i sig och mycket annat. Hur ni finner oss på dessa sociala medier kan ni se precis nedanför just denna text!  <br><br><br>
+
+        Facebook: Gustavsson's Gourmet <br>
+
+        Instagram: Gustavssonsgourmet </p>
  	  </section>
  </div>
 
